--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple websocket server.",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "start": "node index.js"
   },
   "author": "",
   "license": "MIT",
